--- a/shop-sphere/src/app/navbar/navbar.component.html
+++ b/shop-sphere/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
     <nav class="navbar-links">
       <a mat-button routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
       <a mat-button routerLink="/products" routerLinkActive="active">Products</a>
-      <a mat-button routerLink="/categories" routerLinkActive="active">Categories</a>
+      <a mat-button routerLink="/new-arrivals" routerLinkActive="active">New Arrivals</a>
       <a mat-button routerLink="/orders" routerLinkActive="active">My Orders</a>
     </nav>
 
