--- a/shop-sphere/src/app/navbar/navbar.component.html
+++ b/shop-sphere/src/app/navbar/navbar.component.html
@@ -24,8 +24,20 @@
       <button mat-icon-button class="cart-btn" (click)="navigateToCart()">
         <mat-icon matBadge="0" matBadgeColor="warn">shopping_cart</mat-icon>
       </button>
-      <a mat-button routerLink="/login">Login</a>
-      <a mat-raised-button color="primary" routerLink="/register">Register</a>
+      <ng-container *ngIf="!isAuthenticated; else authenticatedUser">
+        <a mat-button routerLink="/login">Login</a>
+        <a mat-raised-button color="primary" routerLink="/register">Register</a>
+      </ng-container>
+      <ng-template #authenticatedUser>
+        <button mat-button [matMenuTriggerFor]="userMenu">
+          <mat-icon>account_circle</mat-icon>
+          {{ user.firstName }}
+        </button>
+        <mat-menu #userMenu="matMenu">
+          <button mat-menu-item (click)="showUserProfile()">My Profile</button>
+          <button mat-menu-item (click)="logout()">Logout</button>
+        </mat-menu>
+      </ng-template>
     </div>
   </div>
 
