--- a/shop-sphere/src/app/footer/footer.component.html
+++ b/shop-sphere/src/app/footer/footer.component.html
@@ -33,11 +33,11 @@
           <div class="footer-column">
             <h4>Quick Links</h4>
             <ul class="footer-links">
-              <li><a href="/about">About Us</a></li>
-              <li><a href="/contact">Contact Us</a></li>
-              <li><a href="/blog">Blog</a></li>
-              <li><a href="/careers">Careers</a></li>
-              <li><a href="/stores">Store Locator</a></li>
+              <li><a href="/">Home</a></li>
+              <li><a href="/products">Products</a></li>
+              <li><a href="/new-arrivals">New Arrivals</a></li>
+              <li><a href="/my-orders">My Orders</a></li>
+              <!-- <li><a href="/cart">Cart</a></li> -->
             </ul>
           </div>
   
@@ -48,7 +48,7 @@
               <li><a href="/shipping">Shipping Information</a></li>
               <li><a href="/returns">Returns & Exchanges</a></li>
               <li><a href="/faq">FAQ</a></li>
-              <li><a href="/size-guide">Size Guide</a></li>
+              <!-- <li><a href="/size-guide">Size Guide</a></li> -->
               <li><a href="/track-order">Track Order</a></li>
             </ul>
           </div>
