--- a/shop-sphere/src/app/login/login.component.html
+++ b/shop-sphere/src/app/login/login.component.html
@@ -10,13 +10,13 @@
     <mat-card-content>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
         <mat-form-field appearance="outline">
-          <mat-label>Email</mat-label>
-          <input matInput type="email" formControlName="email" placeholder="Enter your email">
-          <mat-icon matPrefix>email</mat-icon>
-          <mat-error *ngIf="loginForm.get('email')?.errors?.['required']">
-            Email is required
+          <mat-label>{{ loginMethod === 'email' ? 'Email' : 'Phone Number' }}</mat-label>
+          <input matInput formControlName="emailOrPhone" [placeholder]="loginMethod === 'email' ? 'Enter your email' : 'Enter your phone number'">
+          <mat-icon matPrefix>{{ loginMethod === 'email' ? 'email' : 'phone' }}</mat-icon>
+          <mat-error *ngIf="loginForm.get('emailOrPhone')?.errors?.['required']">
+            {{ loginMethod === 'email' ? 'Email' : 'Phone number' }} is required
           </mat-error>
-          <mat-error *ngIf="loginForm.get('email')?.errors?.['email']">
+          <mat-error *ngIf="loginForm.get('emailOrPhone')?.errors?.['email']">
             Please enter a valid email
           </mat-error>
         </mat-form-field>
@@ -45,21 +45,9 @@
           Sign In
         </button>
 
-        <div class="divider">
-          <span>Or continue with</span>
-        </div>
-
-        <div class="social-login">
-          <button mat-mini-fab color="default" type="button" class="social-button">
-            <mat-icon svgIcon="google"></mat-icon>
-          </button>
-          <button mat-mini-fab color="default" type="button" class="social-button">
-            <mat-icon svgIcon="facebook"></mat-icon>
-          </button>
-          <button mat-mini-fab color="default" type="button" class="social-button">
-            <mat-icon svgIcon="apple"></mat-icon>
-          </button>
-        </div>
+        <button mat-button type="button" (click)="toggleLoginMethod()" class="toggle-login-method">
+          Sign in with {{ loginMethod === 'email' ? 'phone number' : 'email' }} instead
+        </button>
 
         <div class="register-link">
           <span>Don't have an account?</span>
