--- a/shop-sphere/src/app/footer/footer.component.html
+++ b/shop-sphere/src/app/footer/footer.component.html
@@ -33,10 +33,10 @@
           <div class="footer-column">
             <h4>Quick Links</h4>
             <ul class="footer-links">
-              <li><a href="/">Home</a></li>
-              <li><a href="/products">Products</a></li>
-              <li><a href="/new-arrivals">New Arrivals</a></li>
-              <li><a href="/my-orders">My Orders</a></li>
+              <li><a routerLink="./">Home</a></li>
+              <li><a routerLink="./products">Products</a></li>
+              <li><a routerLink="./new-arrivals">New Arrivals</a></li>
+              <li><a routerLink="./orders">My Orders</a></li>
               <!-- <li><a href="/cart">Cart</a></li> -->
             </ul>
           </div>
@@ -45,11 +45,11 @@
           <div class="footer-column">
             <h4>Customer Service</h4>
             <ul class="footer-links">
-              <li><a href="/shipping">Shipping Information</a></li>
-              <li><a href="/returns">Returns & Exchanges</a></li>
-              <li><a href="/faq">FAQ</a></li>
+              <li><a routerLink="./shipping">Shipping Information</a></li>
+              <li><a routerLink="./returns">Returns & Exchanges</a></li>
+              <li><a routerLink="./faq">FAQ</a></li>
               <!-- <li><a href="/size-guide">Size Guide</a></li> -->
-              <li><a href="/track-order">Track Order</a></li>
+              <li><a routerLink="./track-order">Track Order</a></li>
             </ul>
           </div>
   
@@ -89,8 +89,8 @@
             <img src="american-express.png" alt="American Express">
           </div>
           <div class="footer-legal">
-            <a href="/privacy">Privacy Policy</a>
-            <a href="/terms">Terms of Service</a>
+            <a routerLink="./privacy">Privacy Policy</a>
+            <a routerLink="./terms">Terms of Service</a>
           </div>
         </div>
       </div>
