--- a/shop-sphere/src/app/navbar/navbar.component.html
+++ b/shop-sphere/src/app/navbar/navbar.component.html
@@ -22,7 +22,9 @@
         <mat-icon>search</mat-icon>
       </button>
       <button mat-icon-button class="cart-btn" (click)="navigateToCart()">
-        <mat-icon matBadge="0" matBadgeColor="warn">shopping_cart</mat-icon>
+        <mat-icon [matBadge]="cartCount" [matBadgeHidden]="cartCount === 0" matBadgeColor="warn">
+          shopping_cart
+        </mat-icon>
       </button>
       <ng-container *ngIf="!isAuthenticated; else authenticatedUser">
         <a mat-button routerLink="/login">Login</a>
